--- a/bundle/community/manifests/opentelemetry.io_instrumentations.yaml
+++ b/bundle/community/manifests/opentelemetry.io_instrumentations.yaml
@@ -1498,6 +1498,8 @@ spec:
                           x-kubernetes-int-or-string: true
                         type: object
                     type: object
+                  useImport:
+                    type: boolean
                   volumeClaimTemplate:
                     properties:
                       metadata:
