--- a/autoinstrumentation/nodejs/package.json
+++ b/autoinstrumentation/nodejs/package.json
@@ -4,12 +4,11 @@
     "private": true,
     "scripts": {
         "clean": "rimraf build/*",
-        "postinstall": "copyfiles -f 'build/src/**' build/workspace/ && copyfiles 'node_modules/**' package.json build/workspace/ && npm -C build/workspace prune --omit=dev --no-package-lock"
+        "postinstall": "copyfiles 'node_modules/**' package.json build/workspace/ && npm -C build/workspace prune --omit=dev --no-package-lock"
     },
     "devDependencies": {
         "copyfiles": "^2.4.1",
-        "rimraf": "^6.0.1",
-        "typescript": "^5.6.3"
+        "rimraf": "^6.0.1"
     },
     "dependencies": {
         "@opentelemetry/api": "1.9.0",
