--- a/config/crd/bases/opentelemetry.io_instrumentations.yaml
+++ b/config/crd/bases/opentelemetry.io_instrumentations.yaml
@@ -1496,6 +1496,8 @@ spec:
                           x-kubernetes-int-or-string: true
                         type: object
                     type: object
+                  useImport:
+                    type: boolean
                   volumeClaimTemplate:
                     properties:
                       metadata:
