--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -76,7 +76,7 @@ jobs:
 
   security:
     permissions:
-      security-events: write
+      security-events: write # for github/codeql-action/analyze to upload SARIF results
     name: Security
     runs-on: ubuntu-latest
     steps:
