--- a/config/webhook/service.yaml
+++ b/config/webhook/service.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   ports:
     - port: 443
-      targetPort: 9443
       protocol: TCP
+      targetPort: webhook-server
   selector:
     app.kubernetes.io/name: opentelemetry-operator
     control-plane: controller-manager
