--- a/tests/e2e-multi-instrumentation/instrumentation-multi-multicontainer-go/02-assert.yaml
+++ b/tests/e2e-multi-instrumentation/instrumentation-multi-multicontainer-go/02-assert.yaml
@@ -100,6 +100,7 @@ spec:
                       prometheus:
                         host: 0.0.0.0
                         port: 8888
+                        without_units: true
           pipelines:
             traces:
               exporters:
