--- a/tests/e2e-multi-instrumentation/instrumentation-multi-multicontainer/01-assert.yaml
+++ b/tests/e2e-multi-instrumentation/instrumentation-multi-multicontainer/01-assert.yaml
@@ -339,6 +339,7 @@ spec:
                       prometheus:
                         host: 0.0.0.0
                         port: 8888
+                        without_units: true
           pipelines:
             traces:
               exporters:
