--- a/tests/e2e-openshift/must-gather/assert-install-target-allocator.yaml
+++ b/tests/e2e-openshift/must-gather/assert-install-target-allocator.yaml
@@ -54,6 +54,7 @@ data:
                               prometheus:
                                   host: 0.0.0.0
                                   port: 8888
+                                  without_units: true
 kind: ConfigMap
 metadata:
   labels:
