--- a/tests/e2e-targetallocator-cr/targetallocator-label/00-assert.yaml
+++ b/tests/e2e-targetallocator-cr/targetallocator-label/00-assert.yaml
@@ -26,6 +26,7 @@ data:
                   prometheus:
                     host: 0.0.0.0
                     port: 8888
+                    without_units: true
       pipelines:
         metrics:
           exporters:
