--- a/tests/e2e-targetallocator-cr/targetallocator-label/02-assert.yaml
+++ b/tests/e2e-targetallocator-cr/targetallocator-label/02-assert.yaml
@@ -30,6 +30,7 @@ data:
                               prometheus:
                                   host: 0.0.0.0
                                   port: 8888
+                                  without_units: true
 ---
 apiVersion: v1
 data:
