--- a/tests/e2e-targetallocator/targetallocator-prometheuscr/00-assert.yaml
+++ b/tests/e2e-targetallocator/targetallocator-prometheuscr/00-assert.yaml
@@ -48,6 +48,7 @@ data:
                               prometheus:
                                   host: 0.0.0.0
                                   port: 8888
+                                  without_units: true
 kind: ConfigMap
 metadata:
   labels:
