--- a/tests/e2e/managed-reconcile/02-assert.yaml
+++ b/tests/e2e/managed-reconcile/02-assert.yaml
@@ -73,6 +73,7 @@ data:
                   prometheus:
                     host: 0.0.0.0
                     port: 8888
+                    without_units: true
       pipelines:
         traces:
           exporters:
