--- a/tests/e2e/prometheus-config-validation/00-promreceiver-allocatorconfig.yaml
+++ b/tests/e2e/prometheus-config-validation/00-promreceiver-allocatorconfig.yaml
@@ -70,6 +70,7 @@ spec:
                   prometheus:
                     host: 0.0.0.0
                     port: 8888
+                    without_units: true
       extensions:
         - health_check
       pipelines:
