--- a/tests/e2e/prometheus-config-validation/02-promreceiver-allocatorconfig-extra.yaml
+++ b/tests/e2e/prometheus-config-validation/02-promreceiver-allocatorconfig-extra.yaml
@@ -46,6 +46,7 @@ spec:
                   prometheus:
                     host: 0.0.0.0
                     port: 8888
+                    without_units: true
       extensions:
         - health_check
       pipelines:
