--- a/tests/e2e/prometheus-config-validation/03-promreceiver-nopromconfig.yaml
+++ b/tests/e2e/prometheus-config-validation/03-promreceiver-nopromconfig.yaml
@@ -41,6 +41,7 @@ spec:
                   prometheus:
                     host: 0.0.0.0
                     port: 8888
+                    without_units: true
       extensions:
         - health_check
       pipelines:
