--- a/tests/e2e/smoke-targetallocator/00-assert.yaml
+++ b/tests/e2e/smoke-targetallocator/00-assert.yaml
@@ -58,6 +58,7 @@ data:
                               prometheus:
                                   host: 0.0.0.0
                                   port: 8888
+                                  without_units: true
 kind: ConfigMap
 metadata:
   name: stateful-collector-5a741df8
