Move creation of target allocator ClusterRoles to a step template
# Conflicts:
#	tests/e2e-targetallocator-cr/chainsaw-test.yaml

# Conflicts:
#	tests/e2e-ta-collector-mtls/ta-collector-mtls/00-install.yaml

--- a/tests/e2e-ta-collector-mtls/ta-collector-mtls/chainsaw-test.yaml
+++ b/tests/e2e-ta-collector-mtls/ta-collector-mtls/chainsaw-test.yaml
@@ -6,6 +6,9 @@ metadata:
   name: targetallocator-collector-mtls
 spec:
   steps:
+  - name: Setup Target Allocator RBAC
+    use:
+      template: ../../step-templates/target-allocator-rbac-comprehensive.yaml
   - name: step-00
     try:
     - apply:
