--- a/tests/e2e-targetallocator-cr/chainsaw-test.yaml
+++ b/tests/e2e-targetallocator-cr/chainsaw-test.yaml
@@ -8,6 +8,17 @@ spec:
   - name: Add OpenShift namespace annotations
     use:
       template: ../step-templates/openshift-namespace-annotations.yaml
+  - name: Setup Target Allocator RBAC
+    use:
+      template: ../step-templates/target-allocator-rbac.yaml
+      with:
+        bindings:
+          - name: serviceAccountName
+            value: cr-targetallocator
+          - name: clusterRoleName
+            value: targetallocator-prometheuscr
+          - name: clusterRoleBindingName
+            value: (join('-', ['ta', $namespace]))
   - name: step-00
     try:
     - apply:
