--- a/bundle/community/manifests/opentelemetry.io_targetallocators.yaml
+++ b/bundle/community/manifests/opentelemetry.io_targetallocators.yaml
@@ -1174,6 +1174,10 @@ spec:
                 default: 30s
                 format: duration
                 type: string
+              collectorTargetReloadInterval:
+                default: 30s
+                format: duration
+                type: string
               env:
                 items:
                   properties:
