--- a/config/crd/bases/opentelemetry.io_targetallocators.yaml
+++ b/config/crd/bases/opentelemetry.io_targetallocators.yaml
@@ -1171,6 +1171,10 @@ spec:
                 default: 30s
                 format: duration
                 type: string
+              collectorTargetReloadInterval:
+                default: 30s
+                format: duration
+                type: string
               env:
                 items:
                   properties:
