fix e2e test (e2e-targetallocator-cr)

--- a/tests/e2e-targetallocator-cr/00-assert.yaml
+++ b/tests/e2e-targetallocator-cr/00-assert.yaml
@@ -86,6 +86,7 @@ data:
     allocation_strategy: consistent-hashing
     collector_not_ready_grace_period: 30s
     collector_selector: null
+    collector_target_reload_interval: 30s
     config:
       scrape_configs:
       - job_name: prometheus
