Add network policy for operator
Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

--- a/config/overlays/openshift/manager-patch.yaml
+++ b/config/overlays/openshift/manager-patch.yaml
@@ -11,3 +11,4 @@
     - '--enable-cr-metrics=true'
     - '--create-sm-operator-metrics=true'
     - '--feature-gates=operator.sidecarcontainers.native'
+    - '--feature-gates=operator.networkpolicy'
