--- a/tests/e2e/operator-restart/chainsaw-test.yaml
+++ b/tests/e2e/operator-restart/chainsaw-test.yaml
@@ -34,3 +34,5 @@ spec:
         duration: 10s
     - assert:
         file: assert-operator-pod.yaml
+    - assert:
+        file: assert-operator-network-policy.yaml
