--- a/bundle/openshift/manifests/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/bundle/openshift/manifests/opentelemetry.io_opentelemetrycollectors.yaml
@@ -6956,6 +6956,12 @@ spec:
                 - sidecar
                 - statefulset
                 type: string
+              networkPolicy:
+                properties:
+                  enabled:
+                    default: true
+                    type: boolean
+                type: object
               nodeSelector:
                 additionalProperties:
                   type: string
