--- a/.chloggen/fix-hpa-cause-restarts.yaml
+++ b/.chloggen/fix-hpa-cause-restarts.yaml
@@ -2,7 +2,7 @@
 change_type: 'bug_fix'
 
 # The name of the component, or a single word describing the area of concern, (e.g. collector, target allocator, auto-instrumentation, opamp, github action)
-component: 'operator'
+component: 'collector'
 
 # A brief description of the change. Surround your text with quotes ("") if it needs to start with a backtick (`).
 note: Fix a Deployment restart issue caused when the HPA settings changed, the webhook would modify spec.replicas.
