--- a/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
@@ -6950,6 +6950,8 @@ spec:
                 properties:
                   metrics:
                     properties:
+                      disableMonitoringService:
+                        type: boolean
                       disablePrometheusAnnotations:
                         type: boolean
                       enableMetrics:
@@ -7789,6 +7791,8 @@ spec:
                     properties:
                       metrics:
                         properties:
+                          disableMonitoringService:
+                            type: boolean
                           disablePrometheusAnnotations:
                             type: boolean
                           enableMetrics:
