--- a/config/crd/bases/opentelemetry.io_targetallocators.yaml
+++ b/config/crd/bases/opentelemetry.io_targetallocators.yaml
@@ -2100,6 +2100,8 @@ spec:
                 properties:
                   metrics:
                     properties:
+                      disableMonitoringService:
+                        type: boolean
                       disablePrometheusAnnotations:
                         type: boolean
                       enableMetrics:
