--- a/bundle/openshift/manifests/opentelemetry.io_targetallocators.yaml
+++ b/bundle/openshift/manifests/opentelemetry.io_targetallocators.yaml
@@ -2103,6 +2103,8 @@ spec:
                 properties:
                   metrics:
                     properties:
+                      disableMonitoringService:
+                        type: boolean
                       disablePrometheusAnnotations:
                         type: boolean
                       enableMetrics:
