Ability to configure Collector's Service, Headless Service, Monitoring Service and Extension Service

--- a/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
@@ -1440,6 +1440,20 @@ spec:
                       x-kubernetes-map-type: atomic
                   type: object
                 type: array
+              extensionService:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
+                type: object
+              headlessService:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
+                type: object
               hostNetwork:
                 type: boolean
               image:
@@ -2332,6 +2346,13 @@ spec:
                 - sidecar
                 - statefulset
                 type: string
+              monitoringService:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
+                type: object
               nodeSelector:
                 additionalProperties:
                   type: string
@@ -2581,6 +2602,13 @@ spec:
                       runAsUserName:
                         type: string
                     type: object
+                type: object
+              service:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
                 type: object
               serviceAccount:
                 type: string
@@ -6049,6 +6077,20 @@ spec:
                       x-kubernetes-map-type: atomic
                   type: object
                 type: array
+              extensionService:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
+                type: object
+              headlessService:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
+                type: object
               hostNetwork:
                 type: boolean
               image:
@@ -6942,6 +6984,13 @@ spec:
                 - sidecar
                 - statefulset
                 type: string
+              monitoringService:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
+                type: object
               nodeSelector:
                 additionalProperties:
                   type: string
@@ -7246,6 +7295,13 @@ spec:
                       runAsUserName:
                         type: string
                     type: object
+                type: object
+              service:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
                 type: object
               serviceAccount:
                 type: string
