--- a/bundle/community/manifests/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/bundle/community/manifests/opentelemetry.io_opentelemetrycollectors.yaml
@@ -1454,6 +1454,20 @@ spec:
                       x-kubernetes-map-type: atomic
                   type: object
                 type: array
+              extensionService:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
+                type: object
+              headlessService:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
+                type: object
               hostNetwork:
                 type: boolean
               image:
@@ -2346,6 +2360,13 @@ spec:
                 - sidecar
                 - statefulset
                 type: string
+              monitoringService:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
+                type: object
               nodeSelector:
                 additionalProperties:
                   type: string
@@ -2595,6 +2616,13 @@ spec:
                       runAsUserName:
                         type: string
                     type: object
+                type: object
+              service:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
                 type: object
               serviceAccount:
                 type: string
@@ -6063,6 +6091,20 @@ spec:
                       x-kubernetes-map-type: atomic
                   type: object
                 type: array
+              extensionService:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
+                type: object
+              headlessService:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
+                type: object
               hostNetwork:
                 type: boolean
               image:
@@ -6956,6 +6998,13 @@ spec:
                 - sidecar
                 - statefulset
                 type: string
+              monitoringService:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
+                type: object
               nodeSelector:
                 additionalProperties:
                   type: string
@@ -7260,6 +7309,13 @@ spec:
                       runAsUserName:
                         type: string
                     type: object
+                type: object
+              service:
+                properties:
+                  enabled:
+                    type: boolean
+                  name:
+                    type: string
                 type: object
               serviceAccount:
                 type: string
