fix (e2e): tests after bug fix on app.kubernetes.io/version label value
Signed-off-by: andrefrco <andre.frco@gmail.com>

--- a/tests/e2e-targetallocator-cr/01-assert.yaml
+++ b/tests/e2e-targetallocator-cr/01-assert.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/managed-by: opentelemetry-operator
     app.kubernetes.io/name: cr-targetallocator
     app.kubernetes.io/part-of: opentelemetry
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: ve2e
   name: cr-targetallocator
 spec:
   replicas: 1
@@ -25,7 +25,7 @@ spec:
         app.kubernetes.io/managed-by: opentelemetry-operator
         app.kubernetes.io/name: cr-targetallocator
         app.kubernetes.io/part-of: opentelemetry
-        app.kubernetes.io/version: latest
+        app.kubernetes.io/version: ve2e
     spec:
       containers:
         - env:
