--- a/tests/e2e-targetallocator-cr/00-assert.yaml
+++ b/tests/e2e-targetallocator-cr/00-assert.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/managed-by: opentelemetry-operator
     app.kubernetes.io/name: cr-targetallocator
     app.kubernetes.io/part-of: opentelemetry
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: ve2e
   name: cr-targetallocator
   ownerReferences:
     - apiVersion: opentelemetry.io/v1alpha1
@@ -31,7 +31,7 @@ spec:
         app.kubernetes.io/managed-by: opentelemetry-operator
         app.kubernetes.io/name: cr-targetallocator
         app.kubernetes.io/part-of: opentelemetry
-        app.kubernetes.io/version: latest
+        app.kubernetes.io/version: ve2e
     spec:
       containers:
         - env:
