--- a/config/overlays/openshift/manager-patch.yaml
+++ b/config/overlays/openshift/manager-patch.yaml
@@ -10,5 +10,4 @@
     - '--openshift-create-dashboard=true'
     - '--enable-cr-metrics=true'
     - '--create-sm-operator-metrics=true'
-    - '--feature-gates=operator.sidecarcontainers.native'
-    - '--feature-gates=operator.networkpolicy'
+    - '--feature-gates=operator.sidecarcontainers.native,operator.networkpolicy'
