--- a/bundle/community/manifests/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/bundle/community/manifests/opentelemetry.io_opentelemetrycollectors.yaml
@@ -5974,6 +5974,8 @@ spec:
                   type:
                     type: string
                 type: object
+              dnsPolicy:
+                type: string
               env:
                 items:
                   properties:
