--- a/bundle/openshift/manifests/opentelemetry-operator.clusterserviceversion.yaml
+++ b/bundle/openshift/manifests/opentelemetry-operator.clusterserviceversion.yaml
@@ -535,7 +535,7 @@ spec:
                 - --openshift-create-dashboard=true
                 - --enable-cr-metrics=true
                 - --create-sm-operator-metrics=true
-                - --feature-gates=operator.sidecarcontainers.native,operator.networkpolicy,operand.networkpolicy
+                - --feature-gates=operator.networkpolicy,operand.networkpolicy
                 env:
                 - name: SERVICE_ACCOUNT_NAME
                   valueFrom:
