--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -70,6 +70,7 @@ jobs:
          - e2e-opampbridge
          - e2e-pdb
          - e2e-prometheuscr
+         - e2e-sidecar
          - e2e-targetallocator
          - e2e-targetallocator-cr
          - e2e-upgrade
@@ -93,9 +94,7 @@ jobs:
            setup: "add-operator-arg OPERATOR_ARG='--feature-gates=operator.targetallocator.mtls' add-certmanager-permissions prepare-e2e"
          - group: e2e-automatic-rbac
            setup: "add-rbac-permissions-to-operator prepare-e2e"
-         - group: e2e-native-sidecar
-           setup: "add-operator-arg OPERATOR_ARG='--feature-gates=operator.sidecarcontainers.native' prepare-e2e"
-           kube-version: "1.29"
+
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
