feat(collector): adds spec.hostPID for all collector modes
This adds the field `hostPID boolean` field to the different modes of the collector PodSpec template.
- adds hostPID to collector,
- adjusts daemonset, deplotment, statefulsets to allow setting hostPID

Inspiration for the code follows from the functionality of the `hostNetwork boolean` field

---------

on-behalf-of: @SAP Simon Olander (simon.olander@sap.com)

--- a/bundle/community/manifests/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/bundle/community/manifests/opentelemetry.io_opentelemetrycollectors.yaml
@@ -1527,6 +1527,8 @@ spec:
                 type: array
               hostNetwork:
                 type: boolean
+              hostPID:
+                type: boolean
               image:
                 type: string
               imagePullPolicy:
@@ -6300,6 +6302,8 @@ spec:
                   type: object
                 type: array
               hostNetwork:
+                type: boolean
+              hostPID:
                 type: boolean
               image:
                 type: string
