--- a/tests/e2e/operator-restart/01-assert-collector.yaml
+++ b/tests/e2e/operator-restart/01-assert-collector.yaml
@@ -1,7 +1,14 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: otel-collector
+status:
+  readyReplicas: 1
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: otel-targetallocator
 status:
   readyReplicas: 1
 ---
@@ -23,3 +30,25 @@ spec:
       app.kubernetes.io/part-of: opentelemetry
   policyTypes:
     - Ingress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: otel-targetallocator-networkpolicy
+spec:
+  ingress:
+    - ports:
+        - port: 8080
+          protocol: TCP
+  egress:
+    - ports:
+        - port: 6443
+          protocol: TCP
+  podSelector:
+    matchLabels:
+      app.kubernetes.io/component: opentelemetry-targetallocator
+      app.kubernetes.io/managed-by: opentelemetry-operator
+      app.kubernetes.io/part-of: opentelemetry
+  policyTypes:
+    - Ingress
+    - Egress
