--- a/config/overlays/openshift/manager-patch.yaml
+++ b/config/overlays/openshift/manager-patch.yaml
@@ -10,4 +10,4 @@
     - '--openshift-create-dashboard=true'
     - '--enable-cr-metrics=true'
     - '--create-sm-operator-metrics=true'
-    - '--feature-gates=operator.sidecarcontainers.native,operator.networkpolicy,collector.networkpolicy'
+    - '--feature-gates=operator.sidecarcontainers.native,operator.networkpolicy,operand.networkpolicy'
