--- a/.chloggen/network-policy-ta.yaml
+++ b/.chloggen/network-policy-ta.yaml
@@ -5,7 +5,7 @@ change_type: enhancement
 component: target allocator
 
 # A brief description of the change. Surround your text with quotes ("") if it needs to start with a backtick (`).
-note:
+note:  Add network policy for the target allocator.
 
 # One or more tracking issues related to the change
 issues: [4231]
