feat: add TrafficDistribution support for OpenTelemetryCollector and TargetAllocator Services
Add TrafficDistribution field to OpenTelemetryCommonFields which is inherited by OpenTelemetryCollector and TargetAllocator. This field allows setting the traffic distribution policy for Kubernetes Services created by these resources.

Signed-off-by: andrefrco <andre.frco@gmail.com>

--- a/bundle/openshift/manifests/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/bundle/openshift/manifests/opentelemetry.io_opentelemetrycollectors.yaml
@@ -3499,6 +3499,8 @@ spec:
                   - whenUnsatisfiable
                   type: object
                 type: array
+              trafficDistribution:
+                type: string
               updateStrategy:
                 properties:
                   rollingUpdate:
@@ -8288,6 +8290,8 @@ spec:
                   - whenUnsatisfiable
                   type: object
                 type: array
+              trafficDistribution:
+                type: string
               upgradeStrategy:
                 enum:
                 - automatic
