Allow setting PriorityClassName on TargetAllocator

--- a/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
@@ -3215,6 +3215,8 @@ spec:
                             type: string
                         type: object
                     type: object
+                  priorityClassName:
+                    type: string
                   prometheusCR:
                     properties:
                       enabled:
@@ -7902,6 +7904,8 @@ spec:
                             type: string
                         type: object
                     type: object
+                  priorityClassName:
+                    type: string
                   prometheusCR:
                     properties:
                       allowNamespaces:
