e2e test should pass in namespace when patching cert

--- a/tests/e2e-ta-collector-mtls/ta-collector-mtls/chainsaw-test.yaml
+++ b/tests/e2e-ta-collector-mtls/ta-collector-mtls/chainsaw-test.yaml
@@ -40,6 +40,8 @@ spec:
           - patch
           - certificate
           - prometheus-cr-ta-server-cert
+          - -n
+          - ${NAMESPACE}
           - --type=json
           - -p
           - "[{\"op\": \"add\", \"path\": \"/metadata/annotations/cert-manager.io~1force-renewal\", \"value\": \"'$(date +%s)'\"}]"
