e2e test remove single-quote from annota tion value of patch

--- a/tests/e2e-ta-collector-mtls/ta-collector-mtls/chainsaw-test.yaml
+++ b/tests/e2e-ta-collector-mtls/ta-collector-mtls/chainsaw-test.yaml
@@ -44,7 +44,7 @@ spec:
           - ${NAMESPACE}
           - --type=json
           - -p
-          - "[{\"op\": \"add\", \"path\": \"/metadata/annotations/cert-manager.io~1force-renewal\", \"value\": \"'$(date +%s)'\"}]"
+          - "[{\"op\": \"add\", \"path\": \"/metadata/annotations/cert-manager.io~1force-renewal\", \"value\": \"$(date +%s)\"}]"
     - sleep:
         duration: 30s
     - apply:
