chore: updated Markdown Lint to use make command

--- a/.github/workflows/ci-markdownlint.yml
+++ b/.github/workflows/ci-markdownlint.yml
@@ -12,12 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # equivalent cli: markdownlint-cli2  "**/*.md" "#**/CHANGELOG.md"  --config .markdownlint.json
-      - name: "Markdown Lint Check"
-        uses: DavidAnson/markdownlint-cli2-action@v19
-        continue-on-error: true
-        with:
-          fix: false
-          globs: |
-            **/*.md
-            !**/CHANGELOG.md
+      - name: Install markdownlint-cli2
+        run: npm install -g markdownlint-cli2
+
+      - name: "Run Markdown Lint Check"
+        run: make markdown-lint
