include cmctl in install-tools so it is cached by GitHub Actions

--- a/tests/e2e-ta-collector-mtls/ta-collector-mtls/chainsaw-test.yaml
+++ b/tests/e2e-ta-collector-mtls/ta-collector-mtls/chainsaw-test.yaml
@@ -35,11 +35,11 @@ spec:
   - name: step-03
     try:
     - command:
-        entrypoint: bin/cmctl                                        
-        args:                                                        
-          - renew                                                    
-          - prometheus-cr-ta-server-cert                             
-          - -n                                                       
+        entrypoint: ./bin/cmctl
+        args:
+          - renew
+          - prometheus-cr-ta-server-cert
+          - -n
           - ${NAMESPACE}
     - sleep:
         duration: 30s
